Fix privacy policy overflow

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -30,6 +30,10 @@ html  {
     scroll-padding-top: 120px;
 }
 
+body {
+    overflow: hidden;
+}
+
 a {
     text-decoration: none;
 }
